# surface-water-flood-impact

./: .gitignore  CHANGELOG.md  README.md  config_example.yaml  event_identification.py  predict_v2019.py  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
files/: cids.tif
impact_models/: predict_v2019.py
preprocessing/: compute_flow_accumulation.py
scripts/: analyze_link_claims_events.py  compute_claims_events_link.py  compute_impact_function_logistic_regression.py  compute_impact_function_random_forest.py  compute_impact_function_v2019.py  event_identification.py
scripts/data_analyses/: analyze_damage_data.py  (+5 more)
src/: analyze_claims_events_matching.py  analyze_link_claims_events.py  compute_claims_events_link.py  compute_impact_function_logistic_regression.py  compute_impact_function_v2019.py  event_identification.py  extract_claims.py  targets.py
swafi/: config.py  damages.py  damages_gvz.py  damages_mobiliar.py  domain.py  events.py  impact.py  impact_basic_options.py  impact_cnn.py  impact_cnn_data_generator.py  impact_cnn_model.py  impact_cnn_options.py  impact_dl.py  impact_dl_data_generator.py  impact_dl_options.py  impact_lr.py  impact_rf.py  impact_rf_options.py  impact_thr.py  impact_tx.py  impact_tx_data_generator.py  impact_tx_model.py  impact_tx_options.py  model_cnn.py  model_dl.py  model_tx.py  precip.py  precip_archive.py  precip_combiprecip.py  precip_forecast.py  precip_icon.py  precipitation.py
utils/: config.py  forecast_verification.py  spatial_operations.py
(+52 files in other folders)
